apps/services/emby/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: emby
  name: emby
spec:
  ports:
    - name: "8096"
      port: 8096
      targetPort: 8096
    - name: "8920"
      port: 8920
      targetPort: 8920
  type: LoadBalancer
  selector:
    io.kompose.service: emby
