apps/services/emby/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby-ingress
  annotations:
    gethomepage.dev/description: Watch movies and TV
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Torrents
    gethomepage.dev/icon: emby.png
    gethomepage.dev/name: Emby
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
  - host: emby.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port:
              number: 8096
  tls:
    - hosts:
        - emby.internal
      secretName: homelab-tls-emby
